gitops/gitea/base/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-db
  namespace: gitea
  labels:
    app: gitea
    app.kubernetes.io/component: gitea
    app.kubernetes.io/instance: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gitea-db
  template:
    metadata:
      labels:
        name: gitea-db
    spec:
      containers:
        - name: postgresql
          image: registry.redhat.io/rhel8/postgresql-15@sha256:0f27ad13eea296dacaec178436be47d07f54536fd4a0418b33a9afd21e74f581
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            initialDelaySeconds: 120
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              memory: 512Mi
          volumeMounts:
            - name: gitea-db
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: gitea-db
          persistentVolumeClaim:
            claimName: gitea-db
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
