gitops/gitea/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitea
  namespace: gitea
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: gitea
---
kind: Service
apiVersion: v1
metadata:
  name: gitea-db
  namespace: gitea
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: gitea-db
