gitops/gitea/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-gitea
  namespace: gitea
spec:
  path: /
  to:
    kind: Service
    name: gitea
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
  wildcardPolicy: None
